# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added url-snarf. The script sniffs the network for URLs in HTTP
  traffic and prints the URL together with the originating IP. [Patrik]

o [NSE] Added http-auth-finder. The scripts spiders a site looking for URLs
  requiring form- or HTTP-based authentication. [Patrik]

o Fixed an assertion failure which could occur when connecting to an
  SSL server:
  nsock_core.c:186: update_events: Assertion `(ev_inc & ev_dec) == 0' failed.
  Thanks to Ron for reporting the bug and testing. [Henri]

o [NSE] Added cccam-version.nse. It detects the CCcam TV card sharing
  system. [David]

o [NSE] Added the scripts xdmcp-discover, broadcast-xdmcp-discover and the
  X Display Manager Control Protocol (xdmcp) library. The scripts discover
  hosts either using unicast or broadcast and try to detect supported
  authentication and authorization mechanisms. [Patrik]

o Audited the nmap-service-probes database to remove all unused
  captures, fixing dozens of bugs with captures either being ignored
  or two fields erroneously using the same capture. This was done by
  Lauri Kokkonen, David Fifield, and Rob Nicholls.

o [NSE] Added script iax2-brute and supporting IAX2 library that performs
  brute-force password guessing against the Asterisk IAX2 protocol. [Patrik]

o Added service probe for the Erlang Port Mapper Daemon. [Patrik]

o [NSE] Added script broadcast-dhcp6-discover and supporting DHCPv6 library.
  The script retrieves and prints an IPv6 address and some of the DHCP6
  options. [Patrik]

o IPv6 OS detection now includes a novelty detection phase that avoids
  printing a match when an observed fingerprint is too different from
  fingerprints seen before. As the OS database is still small, this
  will help not to make what is essentially a wild guess when seeing a
  new operating system. [David]

o [NSE] Added script dns-srv-enum that enumerates DNS service records for a
  given domain. [Patrik]
